terraform/environments/eph/eks_ipv4_karpenter_mng/example.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inflate
spec:
  # scale it manually
  replicas: 0
  selector:
    matchLabels:
      app: inflate
  template:
    metadata:
      labels:
        app: inflate
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - name: inflate
          image: public.ecr.aws/eks-distro/kubernetes/pause:3.7
          resources:
            requests:
              cpu: 1
